codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1376
expression: rendered
---
╭─────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.159.3-custom -> 9.9.9            │
│ Run codex update to update.                             │
│                                                         │
│ See full release notes:                                 │
│ https://github.com/SeventyfourSam/codex/releases/latest │
╰─────────────────────────────────────────────────────────╯
