codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1385
expression: rendered
---
╭─────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.159.0-custom.1 -> 9.9.9          │
│ Run codex update to update.                             │
│                                                         │
│ See full release notes:                                 │
│ https://github.com/SeventyfourSam/codex/releases/latest │
╰─────────────────────────────────────────────────────────╯
